--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.input-primary {
+  @apply bg-white text-base rounded-2xl text-blue-primary px-4 py-3 outline-none;
+}
