--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.react-responsive-modal-modal {
-  background-color: #6175ae !important;
-  border-radius: 8px !important;
-  color: white !important;
-}
-
 .input-primary {
-  @apply bg-white text-base rounded-2xl px-4 py-3 outline-none;
+  @apply bg-white text-base text-blue-primary rounded-2xl px-4 py-3 outline-none;
 }
